change layout issues

--- a/style.css
+++ b/style.css
@@ -10,8 +10,6 @@
 }
 
 #head-img {
-  height: 239px;
-  /*margin-right: 100px;*/
   display: inline;
   float: right;
 }
@@ -20,22 +18,21 @@ h1 {
   font-size: 350%;
   font-family: 'Slabo 27px', serif;
   color: #000000;
-  padding-left: 40px;
-  padding-top: 50px;
-  /*diplay: inline;*/
-  /*float: left;*/
+  margin-top: 80px;
+  margin-left: 40px;
 }
 
-.clearfix{clear: both;}
+.clearfix {
+  clear: both;
+}
 
-#navbar{float:left;}
+#navbar{
+  float:left;
+}
+
 #nav{
 	width:150px;
 	list-style: none;
-/*	float: left;
-*/	padding: 10px;
-	/*margin: 10px 60px;*/
-
 }
 
 #nav li{
@@ -44,6 +41,7 @@ h1 {
     color: #FFFFFF;
 	  font-size: 36px;
 	  padding: 12px;
+    padding-right: 180px;
 }
 
 #nav a{
@@ -56,7 +54,12 @@ h1 {
 #body{
   margin: 20px;
   padding: 10px;
-	width: 400px;
+	width: 600px;
 	float: left;
 	border: 1px dotted grey;
+  margin-left: 100px;
 }
+ ul {
+   padding: 0px;
+   /*margin: 0px;*/
+ }
